--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter:
     sdk: flutter
+  provider: ^6.1.2
   url_launcher: ^6.2.5
   video_player: ^2.8.3
 
