--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^6.1.2
+  sliding_up_panel: ^2.0.0+1
   url_launcher: ^6.2.5
   video_player: ^2.8.3
 
