--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter:
     sdk: flutter
+  flutter_share_me: ^1.4.0
   provider: ^6.1.2
   sliding_up_panel: ^2.0.0+1
   url_launcher: ^6.2.5
