--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   flutter_share_me: ^1.4.0
   provider: ^6.1.2
   sliding_up_panel: ^2.0.0+1
-  url_launcher: ^6.2.5
+  url_launcher: ^6.3.0
   video_player: ^2.8.3
 
 dev_dependencies:
@@ -58,6 +58,17 @@ flutter:
   assets:
     - assets/images/
     - assets/videos/
+    - assets/fonts/Fredoka/static/Fredoka-Regular.ttf
+
+  fonts:
+    - family: Fredoka
+      fonts:
+       - asset: assets/fonts/Fredoka/static/Fredoka-Regular.ttf
+       - asset: assets/fonts/Fredoka/static/Fredoka-Bold.ttf
+         weight: 700
+       - asset: assets/fonts/Fredoka/static/Fredoka-Light.ttf
+       - asset: assets/fonts/Fredoka/static/Fredoka-SemiBold.ttf
+         weight: 700
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
