--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_share_me: ^1.4.0
+  flutter_svg: ^2.0.10+1
   provider: ^6.1.2
   sliding_up_panel: ^2.0.0+1
   url_launcher: ^6.3.0
@@ -63,12 +64,12 @@ flutter:
   fonts:
     - family: Fredoka
       fonts:
-       - asset: assets/fonts/Fredoka/static/Fredoka-Regular.ttf
-       - asset: assets/fonts/Fredoka/static/Fredoka-Bold.ttf
-         weight: 700
-       - asset: assets/fonts/Fredoka/static/Fredoka-Light.ttf
-       - asset: assets/fonts/Fredoka/static/Fredoka-SemiBold.ttf
-         weight: 700
+        - asset: assets/fonts/Fredoka/static/Fredoka-Regular.ttf
+        - asset: assets/fonts/Fredoka/static/Fredoka-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/Fredoka/static/Fredoka-Light.ttf
+        - asset: assets/fonts/Fredoka/static/Fredoka-SemiBold.ttf
+          weight: 700
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
