--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,32 +1,32 @@
 {
-    "name": "marking_web",
-    "short_name": "marking_web",
+    "name": "aromas_selectos",
+    "short_name": "aromas_selectos",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
+    "background_color": "#FFFFFF",
+    "theme_color": "#FFFFFF",
     "description": "A new Flutter project.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
         {
-            "src": "icons/Icon-192.png",
+            "src": "icons/logo_pr1.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "icons/Icon-512.png",
+            "src": "icons/logo_pr1.png",
             "sizes": "512x512",
             "type": "image/png"
         },
         {
-            "src": "icons/Icon-maskable-192.png",
+            "src": "icons/logo_pr1.png",
             "sizes": "192x192",
             "type": "image/png",
             "purpose": "maskable"
         },
         {
-            "src": "icons/Icon-maskable-512.png",
+            "src": "icons/logo_pr1.png",
             "sizes": "512x512",
             "type": "image/png",
             "purpose": "maskable"
